Fixes #16274: Dark mode highlight color (#16355)
* Increase ::selection background-color aplha

* Improve comment for override

* Add compiled CSS

* Only override on dark theme

--- a/netbox/project-static/styles/overrides/_tabler.scss
+++ b/netbox/project-static/styles/overrides/_tabler.scss
@@ -39,3 +39,8 @@ table a {
   // Adjust table anchor link contrast as not enough contrast in dark mode
   filter: brightness(110%);
 }
+
+// Override background color alpha value
+[data-bs-theme=dark] ::selection {
+  background-color: rgba(var(--tblr-primary-rgb),.48)
+}
